tests/ui/traits/const-traits/const-drop-fail.old_precise.stderr
error[E0277]: the trait bound `NonTrivialDrop: const Destruct` is not satisfied
  --> $DIR/const-drop-fail.rs:34:5
   |
LL |         const _: () = check($exp);
   |                       ----- required by a bound introduced by this call
...
LL |     NonTrivialDrop,
   |     ^^^^^^^^^^^^^^
   |
note: required by a bound in `check`
  --> $DIR/const-drop-fail.rs:25:19
   |
LL | const fn check<T: [const] Destruct>(_: T) {}
   |                   ^^^^^^^^^^^^^^^^ required by this bound in `check`

error[E0277]: the trait bound `NonTrivialDrop: const Destruct` is not satisfied
  --> $DIR/const-drop-fail.rs:36:5
   |
LL |         const _: () = check($exp);
   |                       ----- required by a bound introduced by this call
...
LL |     ConstImplWithDropGlue(NonTrivialDrop),
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required by a bound in `check`
  --> $DIR/const-drop-fail.rs:25:19
   |
LL | const fn check<T: [const] Destruct>(_: T) {}
   |                   ^^^^^^^^^^^^^^^^ required by this bound in `check`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
